--- a/favorite-styles.css
+++ b/favorite-styles.css
@@ -49,6 +49,9 @@ header h2 {
     line-height: 1.2em;
     letter-spacing: 0.12em;
     margin-top: 1em;
+    margin-left: 0px;
+    padding-left: 0px;
+    border-radius: 2px;
 }
 header h2 a:link, header h2 a:visited {
     color: inherit;
@@ -61,12 +64,15 @@ header p {
     color: #ffffff;
     font-size: 150%;
     font-weight: 700;
-    text-shadow: 0px 3px 5.95px rgba(0, 0, 0, 0.8);
+    text-shadow: 2px 5px 2.95px rgba(0, 0, 0, 0.8);
     text-align: center;
     line-height: 1em;
     letter-spacing: 0.4em;
     font-family: source-sans-pro, "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
     font-style: normal;
+    margin-left: 0px;
+    padding-left: 0px;
+    text-decoration: overline;
 }
 header {
     background-color: #EEDD55;
@@ -322,6 +328,7 @@ address.col-6 {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
+    background-color: #000000;
 }
 h2 {
     font-size: 180%;
